# foundry-hosted-agentframework-demos

./: .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  agent.yaml  azure.yaml  call_deployed_agent.py  main.py  plan.md  pyproject.toml  requirements.txt  stage2_foundry_iq.py  stage2_foundry_iq_retrieve.py  todo.md  write_dot_env.ps1  write_dot_env.sh
agents/: agent.yaml  call_foundry_hosted.py  stage0_local_model.py  stage1_foundry_model.py  stage2_foundry_iq.py  stage3_foundry_toolbox.py  stage4_foundry_hosted.py
infra/: create-search-indexes.py  create-toolbox.py  main.bicep
infra/core/ai/: ai-project.bicep
infra/core/host/: acr.bicep
infra/hooks/: write_dot_env.ps1  write_dot_env.sh
scripts/: continuous_eval.py  continuous_eval_alert.py  list_schedules.py  locustfile.py  quality_eval.py  red_team_scan.py  red_team_scan_local.py  scheduled_eval.py  scheduled_red_team.py
scripts/eval_output/: quality_eval_output_internal-hr-benefits-agent.json  quality_ground_truth_with_tools_hosted-agentframework-agent.jsonl
workflows/: pyproject.toml  stage2_agent_executors.py  stage3_as_agent.py  stage4_foundry_hosted_as_agent.py
